am adaugat un tabel si un form de cautare

--- a/index.html
+++ b/index.html
@@ -15,21 +15,37 @@
         </ul>
   
         <div class="buttons">
-            <a class="login">Login</button>
-            <a class="logout">Logout</button>
+            <a class="login" href="auth.html">Login</a>
+            <a class="logout">Logout</a>
         </div>
 
     </nav>
-    <!-- <div class="container">
+    <div class="container">
+        <div class="cautare">
+            <form class="form-cautare" action="index.html">
+                <label class="form-title">Introduceti ID-ul elevului</label>
+                <input type="text" id="search-form" name="search-form" value="">
+                <button class="buton">Cauta</button>
+            </form>
+
+        </div>
         <table>
             <tr>
                 <th>ID_Student</th>
                 <th>Nume</th>
                 <th>Prenume</th>
+                <th>Materia</th>
                 <th>Nota</th>
             </tr>
+            <tr>
+                <td>1</td>
+                <td>Covaciu</td>
+                <td>Andrei</td>
+                <td>Sport</td>
+                <td>10</td>
+              </tr>
         </table>
-    </div> -->
+    </div>
 </body>
 
 <script src="app.js"></script>
