am creat un vector de obiecte de tipul studenti si am implementat adaugarea lor intr-un tabel

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="note.html">Grades</a></li>
+            <li><a href="students.html">Students</a></li>
             
         </ul>
   
