--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </ul>
   
         <div class="buttons">
-            <a class="login" href="auth.html">Login</a>
-            <a class="logout">Logout</a>
+            <a class="" href="signup.html">signUp</a>
+            <a class="" href="login.html">Login</a>
         </div>
 
     </nav>
@@ -53,5 +53,6 @@
     </div>
 </body>
 
-<script src="app.js"></script>
+
+<script src="app.js" type="module"></script>
 </html>
