pagina students arata toti elevii si notele lor, pagina grades este locul in care se poate adauga o nota noua fiecarui elev, iar in pagina home se introduce id ul elevului si apar informatiile despre notele lui

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
   
         <div class="buttons">
-            <a class="" href="signup.html">signUp</a>
+            <a class="" href="signup.html">Sign Up</a>
             <a class="" href="login.html">Login</a>
         </div>
 
@@ -30,7 +30,7 @@
             <form class="form-cautare" action="index.html">
                 <label class="form-title">Introduceti ID-ul elevului</label>
                 <input type="text" id="search-form" name="search-form" value="">
-                <button class="buton">Cauta</button>
+                <button class="buton" id="buton">Cauta</button>
             </form>
 
         </div>
@@ -42,17 +42,13 @@
                 <th>Materia</th>
                 <th>Nota</th>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>Covaciu</td>
-                <td>Andrei</td>
-                <td>Sport</td>
-                <td>10</td>
-              </tr>
+            <tbody id="tbody">
+
+            </tbody>
         </table>
     </div>
 </body>
 
 
-<script src="app.js" type="module"></script>
+<script src="main.js"></script>
 </html>
