am adaugat style tabelelor

--- a/index.html
+++ b/index.html
@@ -34,18 +34,16 @@
             </form>
 
         </div>
-        <table>
+        <table id="tabel_studenti">
             <tr>
-                <th>ID_Student</th>
-                <th>Nume</th>
-                <th>Prenume</th>
-                <th>Materia</th>
-                <th>Nota</th>
+              <th>ID_Student</th>
+              <th>Nume</th>
+              <th>Prenume</th>
+              <th>Materia</th>
+              <th>Nota</th>
             </tr>
-            <tbody id="tbody">
-
-            </tbody>
-        </table>
+            <tbody id="tbody"></tbody>
+          </table>
     </div>
 </body>
 
