--- a/students.html
+++ b/students.html
@@ -1,28 +1,25 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="students.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="students.css" />
     <title>Studenti</title>
-</head>
-<body>
-    
-    <table id="tabel_studenti">
+  </head>
+  <body>
+    <div id="container">
+      <table id="tabel_studenti">
         <tr>
-            <th>ID_Student</th>
-            <th>Nume</th>
-            <th>Prenume</th>
-            <th>Materia</th>
-            <th>Nota</th>
+          <th>ID_Student</th>
+          <th>Nume</th>
+          <th>Prenume</th>
+          <th>Materia</th>
+          <th>Nota</th>
         </tr>
-        <tbody id="tbody">
-
-        </tbody>
-    </table>
-
-
+        <tbody id="tbody"></tbody>
+      </table>
+    </div>
 
     <script src="students.js" type="module"></script>
-</body>
+  </body>
 </html>
