--- a/note.html
+++ b/note.html
@@ -7,19 +7,16 @@
     <title>Grades</title>
 </head>
 <body>
-    
-    <div class="login-box">
-        <div class="left">
+    <div class="container">
           <h1>Adauga o nota noua</h1>
-  
           <input type="number" min="0" id="id_student" name="id_student" placeholder="ID_Student" />
           <input type="text" id="nume_student" name="nume_student" placeholder="Nume" />
           <input type="text" id="prenume_student" name="prenume_student" placeholder="Prenume" />
           <input type="text" id="materia_student" name="materia_student" placeholder="Materia" />
           <input type="number" min="1" max="10" id="nota_student" name="nota_student" placeholder="Nota" />
           <input type="submit" id="adauga" name="adauga" value="Adauga" />
-        </div>
-      </div>
+    </div>
+    
 
     <script src="note.js"></script>
 </body>
