am moditifat path-ul pentru auth in index.html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </ul>
   
         <div class="buttons">
-            <a class="" href="signup.html">Sign Up</a>
-            <a class="" href="login.html">Login</a>
+            <a class="" href="auth/signup.html">Sign Up</a>
+            <a class="" href="auth/login.html">Login</a>
         </div>
 
     </nav>
