am adaugat navbar peste tot

--- a/note.html
+++ b/note.html
@@ -7,6 +7,20 @@
     <title>Grades</title>
 </head>
 <body>
+  <nav class="nav">
+    <ul class="links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="note.html">Grades</a></li>
+        <li><a href="students.html">Students</a></li>
+        
+    </ul>
+
+    <div class="buttons">
+        <a class="" href="auth/signup.html">Sign Up</a>
+        <a class="" href="auth/login.html">Login</a>
+    </div>
+
+</nav>
     <div class="container">
           <h1>Adauga o nota noua</h1>
           <input type="number" min="0" id="id_student" name="id_student" placeholder="ID_Student" />
