--- a/students.html
+++ b/students.html
@@ -7,6 +7,20 @@
     <title>Studenti</title>
   </head>
   <body>
+    <nav class="nav">
+        <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="note.html">Grades</a></li>
+            <li><a href="students.html">Students</a></li>
+            
+        </ul>
+  
+        <div class="buttons">
+            <a class="" href="auth/signup.html">Sign Up</a>
+            <a class="" href="auth/login.html">Login</a>
+        </div>
+
+    </nav>
     <div id="container">
       <table id="tabel_studenti">
         <tr>
