--- a/note.html
+++ b/note.html
@@ -23,13 +23,15 @@
 </nav>
     <div class="container">
           <h1>Adauga o nota noua</h1>
-          <input type="number" min="0" id="id_student" name="id_student" placeholder="ID_Student" />
-          <input type="text" id="nume_student" name="nume_student" placeholder="Nume" />
-          <input type="text" id="prenume_student" name="prenume_student" placeholder="Prenume" />
-          <input type="text" id="materia_student" name="materia_student" placeholder="Materia" />
-          <input type="number" min="1" max="10" id="nota_student" name="nota_student" placeholder="Nota" />
-          <input type="submit" id="adauga" name="adauga" value="Adauga" />
-    </div>
+          <form name="adauga-student">
+            <input class="input" type="number" min="0" id="id_student" name="id_student" placeholder="ID_Student"  />
+            <input class="input" type="text" id="nume_student" name="nume_student" placeholder="Nume" />
+            <input class="input" type="text" id="prenume_student" name="prenume_student" placeholder="Prenume" />
+            <input class="input" type="text" id="materia_student" name="materia_student" placeholder="Materia" />
+            <input class="input" type="number" min="1" max="10" id="nota_student" name="nota_student" placeholder="Nota" />
+            <input type="button" id="adauga" name="adauga" value="Adauga" onclick="submitForm()" />
+          </form>
+   </div>
     
 
     <script src="note.js"></script>
