--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="container">
       <div class="cautare">
-        <form class="form-cautare" action="index.html">
+        <form class="form-cautare">
           <label class="form-title">Introduceti ID-ul elevului</label>
           <input type="text" id="search-form" name="search-form" value="" />
           <button class="buton" id="buton">Cauta</button>
