--- a/edit_grades.html
+++ b/edit_grades.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="students.css" />
+    <link rel="stylesheet" href="edit_grades.css" />
     <title>Studenti</title>
   </head>
   <body>
@@ -29,11 +29,12 @@
           <th>Prenume</th>
           <th>Materia</th>
           <th>Nota</th>
+          <th>Action</th> 
         </tr>
         <tbody id="tbody"></tbody>
       </table>
     </div>
 
-    <script src="students.js" type="module"></script>
+    <script src="edit_grades.js" type="module"></script>
   </body>
 </html>
