--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="note.html">Grades</a></li>
         <li><a href="students.html">Students</a></li>
+        <li><a href="delete_grades.html">Delete</a></li>
+        <li><a href="edit_grades.html">Edit</a></li>
       </ul>
 
       <div class="buttons">
