--- a/note.html
+++ b/note.html
@@ -6,21 +6,20 @@
     <link rel="stylesheet" href="note.css">
     <title>Grades</title>
 </head>
-<body>
-  <nav class="nav">
+<nav class="nav">
     <ul class="links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="note.html">Grades</a></li>
-        <li><a href="students.html">Students</a></li>
-        
+      <li><a href="index.html">Home</a></li>
+      <li><a href="note.html">Grades</a></li>
+      <li><a href="students.html">Students</a></li>
+      <li><a href="delete_grades.html">Delete</a></li>
+      <li><a href="edit_grades.html">Edit</a></li>
     </ul>
 
     <div class="buttons">
-        <a class="" href="auth/signup.html">Sign Up</a>
-        <a class="" href="auth/login.html">Login</a>
+      <a class="" href="auth/signup.html">Sign Up</a>
+      <a class="" href="auth/login.html">Login</a>
     </div>
-
-</nav>
+  </nav>
     <div class="container">
           <h1>Adauga o nota noua</h1>
           <form name="adauga-student">
